--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+
+
+img {
+  margin: 40%;
+  border-radius: 100px;
+  border: 1px solid grey;
+  padding: 20px;
+  width: 180px;
+  height: 180px;
+  /*display: none;*/
+}
+
 .btn {
   margin: 2px;
   border: 1px solid black;
