--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,41 @@
+body {
+  background-color: #2D3139;
+}
+
+.jumbotron {
+  text-align: center;
+  color: #E2B273;
+  background-color: #181C21;
+  font-family: 'VT323', monospace;
+}
+
+li, p {
+  color: #BCC7DE;
+  font-size: 20px;
+  font-family: 'Exo 2', sans-serif;
+}
+
+label {
+  color: #1EABB7;
+  font-size: 15px;
+  font-family: 'Exo 2', sans-serif;
+}
+
 h3 {
   margin-left: 20px;
   text-align: center;
+  color: #D1864A;
 }
 
 img {
   border-radius: 100px;
-  border: 5px solid grey;
+  border: 5px solid #1EABB7;
   padding: 20px;
   width: 180px;
   height: 180px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   background-color: white;
 }
 
